PR/50879: David Binderman: remove redundant code.